--- a/reactnative_guess_num/package.json
+++ b/reactnative_guess_num/package.json
@@ -17,6 +17,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-line-chart": "^1.0.4",
     "react-native-svg": "^12.1.0",
     "react-native-web": "~0.13.12"
